Trying to fix alignment again

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ body {
     top: 0;
 }
 
+.contents{
+    top: 200px;
+}
+
 h1 {
   color: #fcfffa;
   font-size: 2.5em;
